sumo/tests/sumo/extended/emitter/errors/routedist/negative_prob/errors.sumo
Error: MSTriggeredSource emitter: Attribute 'probability' for route '1' is negative (must not).
Quitting (on error).
